# obu-1c-ad

./: .gitignore  README.md  pyproject.toml  run.sh
src/obu-1c-ad/: database.py  exporter.py  logger.py  main.py
src/obu_1c-ad/: main.py
