[project]
name = "obu-1c-ad"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "C", "D", "I", "UP"]
ignore = ["D100", "D103", "D104"]
